<resources>
    <string name="app_name">Major.ID</string>
    <string name="txt1_chat">Start Chat</string>
    <string name="txt2_chat">Send</string>
    <string name="txt1_home">WALLET</string>
    <string name="txt2_home">Rp. 10.000</string>
    <string name="txt3_home">Payment</string>
    <string name="txt4_home">Top-Up</string>
    <string name="txt5_home">Explore</string>
    <string name="todo">TODO</string>
    <string name="txt1_menu">Email</string>
    <string name="txt1_email">Recipient</string>
    <string name="subject">Subject</string>
    <string name="txt3_email">Message</string>
    <string name="txt4_email">Send Email</string>
    <string name="txt5_email">You can email our tutor from 9am to 9pm. Please kindly send to this email Tentor.majorid@gmail.com</string>
    <string name="science">Science</string>
    <string name="social">Social</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt6_email">Our mentor are available from 9 am until 9 pm. You can contact us if you want to consultation. Email: mentor.majorid@gmail.com .</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>