<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:orientation="vertical"
    tools:context=".EmailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt6_email"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/email_et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt1_email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/email_et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_margin="10dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/email_et3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/txt3_email"
        android:gravity="start"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/email_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt4_email"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

</LinearLayout>