<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/home_img1"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dua"
            android:contentDescription="@string/todo"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_img1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/background2"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="serif"
                    android:text="@string/txt1_home"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="serif"
                    android:text="@string/txt2_home"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="10dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_payment_24"
                        android:contentDescription="@string/todo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="serif"
                        android:text="@string/txt3_home"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_add_box_24"
                        android:contentDescription="@string/todo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="serif"
                        android:text="@string/txt4_home"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginEnd="10dp"
                    tools:ignore="RelativeOverlap,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_explore_24"
                        android:contentDescription="@string/todo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="serif"
                        android:text="@string/txt5_home"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />

                </LinearLayout>

            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/home_tabs"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/background2"
                app:tabIndicatorColor="#3BC1FF"
                app:tabTextColor="@color/white"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/home_pager1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        app:fabSize="normal"
        app:backgroundTint="@color/background4"
        android:elevation="6dp"
        android:src="@drawable/message"
        tools:targetApi="lollipop"
        android:contentDescription="@string/todo" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>